@@ -2,6 +2,16 @@
 --add-opens java.base/java.lang=ALL-UNNAMED
 --add-opens java.base/java.math=ALL-UNNAMED
 --add-opens java.base/sun.net.util=ALL-UNNAMED
+
+JVM_OPTS= 
+--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED 
+--add-opens=java.base/java.lang=ALL-UNNAMED 
+--add-opens=java.base/java.lang.invoke=ALL-UNNAMED 
+--add-opens=java.base/java.io=ALL-UNNAMED 
+--add-opens=java.base/java.security=ALL-UNNAMED 
+--add-opens=java.base/java.util=ALL-UNNAMED 
+--add-opens=java.management/javax.management=ALL-UNNAMED 
+--add-opens=java.naming/javax.naming=ALL-UNNAMED
 ```
 
 ```shell
